[project]
name = "maddpg-traffic"
version = "0.1.0"
description = "MADDPG for SUMO Traffic Light Optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "traci>=1.20.0",
    "sumolib>=1.20.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
